<resources>
    <string name="app_name">BabyNeeds</string>
    <string name="action_settings">Settings</string>
    <string name="add_items">Add items</string>
    <string name="enter_the_items">Enter the items</string>
    <string name="enter_item">Enter item</string>
    <string name="quantity">Quantity</string>
    <string name="color">Item color</string>
    <string name="item_size">Item size</string>
    <string name="save">save</string>
</resources>
