<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/popup_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_title"
                android:layout_centerHorizontal="true"
                android:hint="@string/enter_the_items"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_items"
                android:layout_below="@id/card_title"
                android:id="@+id/baby_item"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:layout_below="@id/baby_item"
                android:id="@+id/item_quantity"
                android:inputType="number"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                android:layout_below="@id/item_quantity"
                android:id="@+id/item_color"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_size"
                android:inputType="number"
                android:layout_below="@id/item_color"
                android:id="@+id/item_size"
                />

            <Button
                android:id="@+id/save_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_size"
                android:layout_marginEnd="5dp"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>